@@ -2,10 +2,15 @@
  OmegaT 5.7.0
 ----------------------------------------------------------------------
   2 Enhancements
-  0 Bug fixes
+  1 Bug fix
   1 Localisation updates
 ----------------------------------------------------------------------
 5.7.0 vs 5.6.0
+
+  Bug fixes:
+
+  - Dictionary pane update is extremely slow for large articles
+  https://sourceforge.net/p/omegat/bugs/1068/
 
   Implemented requests:
 
